--- a/app/src/main/res/layout/team_row.xml
+++ b/app/src/main/res/layout/team_row.xml
@@ -4,12 +4,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/list_row"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:minHeight="@dimen/row_height">
     <TextView
         android:id="@+id/list_team_name"
         android:layout_width="0dp"
         android:layout_weight="3"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textStyle="bold"/>
     <TextView
         android:id="@+id/list_team_owner"
         android:layout_width="0dp"
@@ -23,6 +25,6 @@
     <TextView
         android:id="@+id/list_team_points"
         android:layout_width="0dp"
-        android:layout_weight="2"
+        android:layout_weight="1.5"
         android:layout_height="wrap_content"/>
 </LinearLayout>
